version/0.3/_sources/getting_started/local/index.rst.txt
.. _ref_creating_local_session:

Launch a local session
======================

If Ansys 2023 R2 or later and PyAnsys Geometry are installed, you can create a local backend session using
Discovery, SpaceClaim, or the Geometry service. Once the backend is running, PyAnsys Geometry can manage the connection.

To launch and establish a connection to the service, open Python and use the following commands for
either Discovery, SpaceClaim, or the Geometry service.

.. tab-set::

    .. tab-item:: Discovery

       .. code:: python

          from ansys.geometry.core import launch_modeler_with_discovery

          modeler_discovery = launch_modeler_with_discovery()

    .. tab-item:: SpaceClaim

       .. code:: python

          from ansys.geometry.core import launch_modeler_with_spaceclaim

          modeler_discovery = launch_modeler_with_spaceclaim()

    .. tab-item:: Geometry service

       .. code:: python

          from ansys.geometry.core import launch_modeler_with_geometry_service

          modeler_discovery = launch_modeler_with_geometry_service()


For more information on the arguments accepted by the launcher methods, see
their API documentation:

* `launch_modeler_with_discovery <../../api/ansys/geometry/core/connection/launcher/index.html#launcher.launch_modeler_with_discovery>`_
* `launch_modeler_with_spaceclaim <../../api/ansys/geometry/core/connection/launcher/index.html#launcher.launch_modeler_with_spaceclaim>`_
* `launch_modeler_with_geometry_service <../../api/ansys/geometry/core/connection/launcher/index.html#launcher.launch_modeler_with_geometry_service>`_

.. note::

    Because this is the first release of the Geometry service, you cannot yet define a product version
    or API version.

.. button-ref:: ../index
    :ref-type: doc
    :color: primary
    :shadow:
    :expand:

    Go to Getting started